# pdf-simplify

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.toml
examples/: README.md
src/pdf_simplify/: __init__.py  cli.py
src/pdf_simplify/core/: __init__.py  chunker.py  formatter.py  markdown_parser.py  parser.py  simplifier.py  summarizer.py
src/pdf_simplify/models/: __init__.py  summary.py
src/pdf_simplify/utils/: __init__.py  config.py
tests/: test_summarizer.py
